# isometric_fighting

./: Cargo.toml  DesignDoc.md  LICENSE  README.md
resources/blender/avatar/: Avatar.blend  Avatar.blend1
resources/blender/avatar/textures/: Material Base Color  Material Base Color~
src/: main.rs
