[package]
name = "isometric_fighting"
version = "0.1.12"
authors = ["Fedor Rusak <node@fedor-rusak.ru>"]
edition = "2018"

[dependencies]
cgmath = { version = "0.16", features = ["mint"]}
# ggez = "0.5.0-rc.0"

[dependencies.ggez]
git="https://github.com/ggez/ggez"
rev = "bf1db8501bf8fcf29c773d8e497440312b9541b3"

[profile.dev]
opt-level=2